--- a/.travis.yml
+++ b/.travis.yml
@@ -22,5 +22,5 @@ deploy:
   skip_cleanup: true
   on:
     all_branches: true
-    tags: true
+#    tags: true
     repo: UnivaCorporation/tortuga-kit-urb-uge
