trying to fix permission issue

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ before_install:
 - cd tortuga_kits/urb_uge_1_0_0/puppet_modules/tortuga_kit_urb_uge/files && curl -sLO https://github.com/UnivaCorporation/urb-uge/releases/download/${URB_TAG}/urb-${URB_VER}.tar.gz && cd -
 install:
 - chmod -R a-w .
+- sudo chown -R travis:travis /home/travis/
 - docker run --rm -it -v `pwd`:/kit-src $BUILD_KIT_IMAGE
 script:
 - echo "Done"
