--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,11 @@ before_install:
 - docker pull $BUILD_KIT_IMAGE
 - cd tortuga_kits/urb_uge_1_0_0/puppet_modules/tortuga_kit_urb_uge/files && curl -sLO https://github.com/UnivaCorporation/urb-uge/releases/download/${URB_TAG}/urb-${URB_VER}.tar.gz && cd -
 install:
+- ls -lFa
 - chmod -R a-w .
-- sudo chown -R travis:travis /home/travis/
+#- sudo chown -R travis:travis /home/travis/
 - docker run --rm -it -v `pwd`:/kit-src $BUILD_KIT_IMAGE
+- ls -lFa
 script:
 - echo "Done"
 deploy:
