--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,9 @@ before_install:
 install:
 - ls -lFa
 - chmod -R a-w .
-#- sudo chown -R travis:travis /home/travis/
 - docker run --rm -it -v `pwd`:/kit-src $BUILD_KIT_IMAGE
+- ls -lFa
+- sudo chown -R travis:travis /home/travis/
 - ls -lFa
 script:
 - echo "Done"
