--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,7 @@ before_install:
 - docker pull $BUILD_KIT_IMAGE
 - cd tortuga_kits/urb_uge_1_0_0/puppet_modules/tortuga_kit_urb_uge/files && curl -sLO https://github.com/UnivaCorporation/urb-uge/releases/download/${URB_TAG}/urb-${URB_VER}.tar.gz && cd -
 install:
-- chmod -R a-w .
-- sudo chown -R travis:travis /home/travis/
+#- chmod -R a-w .
 - docker run --rm -it -v `pwd`:/kit-src $BUILD_KIT_IMAGE
 script:
 - echo "Done"
@@ -23,5 +22,5 @@ deploy:
   skip_cleanup: true
   on:
     all_branches: true
-#    tags: true
+    tags: true
     repo: UnivaCorporation/tortuga-kit-urb-uge
