--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ env:
 - TORTUGA_BUILD_DOCKER="true" BUILD_KIT_IMAGE="univa/tortuga-build-kit:master-latest" URB_VER="3.1.1" URB_TAG="v3.1.1_rc1"
 before_install:
 - docker pull $BUILD_KIT_IMAGE
-- cd tortuga_kits/urb_uge_1_0_0/puppet_modules/tortuga_kit_urb_uge/files && curl -sLO https://github.com/UnivaCorporation/urb-uge/releases/download/${URB_TAG}/urb-${URB_VER}.tar.gz && cd -
+- cd tortuga_kits/urb_uge_1_0_0/puppet_modules/tortuga_kit_urb_uge/files && curl -sLO --fail https://github.com/UnivaCorporation/urb-uge/releases/download/${URB_TAG}/urb-${URB_VER}.tar.gz && cd -
 install:
 #- chmod -R a-w .
 - docker run --rm -it -v `pwd`:/kit-src $BUILD_KIT_IMAGE
