--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ python:
 services:
 - docker
 env:
-- TORTUGA_BUILD_DOCKER="true" BUILD_KIT_IMAGE="univa/tortuga-build-kit:master-latest" URB_VER="3.1.1" URB_TAG="v3.1.1_rc1"
+- TORTUGA_BUILD_DOCKER="true" BUILD_KIT_IMAGE="univa/tortuga-build-kit:master-latest" URB_VER="3.1.1" URB_TAG="v3.1.1"
 before_install:
 - docker pull $BUILD_KIT_IMAGE
 - cd tortuga_kits/urb_uge_1_0_0/puppet_modules/tortuga_kit_urb_uge/files && curl -sLO --fail https://github.com/UnivaCorporation/urb-uge/releases/download/${URB_TAG}/urb-${URB_VER}.tar.gz && cd -
